# trading-forecast-chatbot

./: .gitignore  README.md  render.yaml  start-backend.sh
backend/: .env.example  .gitignore  conftest.py  main.py  poetry.toml  pyproject.toml  pytest.ini  setup.sh
backend/services/: claude_service.py  ipo_service.py  market_service.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_ipo_service.py  test_market_service.py
backend/tests/utils/: helpers.py  logger.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts
frontend/src/components/: ChatWindow.tsx  Header.tsx  MessageBubble.tsx  QuickActions.tsx
frontend/src/types/: index.ts
