[tool.poetry]
name = "trading-chatbot-backend"
version = "0.1.0"
description = "TradeBot — Market Intelligence Chatbot Backend"
authors = ["Suhas Deshmukh"]
packages = [{ include = "services" }]

[tool.poetry.dependencies]
python          = "^3.11"
fastapi         = "^0.115.6"
uvicorn         = { extras = ["standard"], version = "^0.34.0" }
anthropic       = "^0.42.0"
yfinance        = "^0.2.51"
pandas          = "^2.2.3"
requests        = "^2.32.3"
beautifulsoup4  = "^4.12.3"
python-dotenv   = "^1.0.1"
httpx           = "^0.27.2"
lxml            = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff        = "^0.8.0"
pytest      = "^8.3.4"
pytest-html = "^4.1.1"
pytest-xdist = "^3.5.0"
pre-commit  = "^4.0.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
